parser/TokenizeParser.py
# Generated from Tokenize.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TokenizeParser ( Parser ):

    grammarFileName = "Tokenize.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'\"'", "'{'", "'}'", "'['", "'<'", 
                     "'>'", "']'", "'('", "')'", "'if'", "'then'", "'elif'", 
                     "'else'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'rec'", "'public'", "'private'", 
                     "'internal'", "'mutable'", "'let'", "'fun'", "'$'", 
                     "':'", "'_'", "'->'", "'+'", "'-'", "'*'", "'/'", "'**'", 
                     "'%'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WHITE_SPACE", 
                      "COMMENT", "IDENTIFIER", "INT", "FLOAT", "INTERPOLATIONSIGN", 
                      "CHAR", "ESC", "BOOL", "UNIT", "REC", "PUBLIC", "PRIVATE", 
                      "INTERNAL", "MUTABLE", "LET", "FUN", "DOLLAR", "COLON", 
                      "MISSING_ARG", "RIGHT_ARROW", "ADD", "MINUS", "MUL", 
                      "DIV", "POW", "MOD", "EQUAL" ]

    RULE_dotIentifier = 0
    RULE_int = 1
    RULE_float = 2
    RULE_unit = 3
    RULE_bool = 4
    RULE_char = 5
    RULE_missing_arg = 6
    RULE_interpolationSign = 7
    RULE_dollar = 8
    RULE_string = 9
    RULE_attribute = 10
    RULE_round_brackets = 11
    RULE_rec = 12
    RULE_public = 13
    RULE_private = 14
    RULE_internal = 15
    RULE_mutable = 16
    RULE_let = 17
    RULE_fun = 18
    RULE_typezation = 19
    RULE_if_then_elif_else = 20
    RULE_add = 21
    RULE_mul = 22
    RULE_div = 23
    RULE_minus = 24
    RULE_pow = 25
    RULE_mod = 26
    RULE_equal = 27
    RULE_expression = 28
    RULE_exprs = 29

    ruleNames =  [ "dotIentifier", "int", "float", "unit", "bool", "char", 
                   "missing_arg", "interpolationSign", "dollar", "string", 
                   "attribute", "round_brackets", "rec", "public", "private", 
                   "internal", "mutable", "let", "fun", "typezation", "if_then_elif_else", 
                   "add", "mul", "div", "minus", "pow", "mod", "equal", 
                   "expression", "exprs" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    WHITE_SPACE=15
    COMMENT=16
    IDENTIFIER=17
    INT=18
    FLOAT=19
    INTERPOLATIONSIGN=20
    CHAR=21
    ESC=22
    BOOL=23
    UNIT=24
    REC=25
    PUBLIC=26
    PRIVATE=27
    INTERNAL=28
    MUTABLE=29
    LET=30
    FUN=31
    DOLLAR=32
    COLON=33
    MISSING_ARG=34
    RIGHT_ARROW=35
    ADD=36
    MINUS=37
    MUL=38
    DIV=39
    POW=40
    MOD=41
    EQUAL=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DotIentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(TokenizeParser.IDENTIFIER)
            else:
                return self.getToken(TokenizeParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return TokenizeParser.RULE_dotIentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDotIentifier" ):
                listener.enterDotIentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDotIentifier" ):
                listener.exitDotIentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDotIentifier" ):
                return visitor.visitDotIentifier(self)
            else:
                return visitor.visitChildren(self)




    def dotIentifier(self):

        localctx = TokenizeParser.DotIentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dotIentifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(TokenizeParser.IDENTIFIER)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 61
                self.match(TokenizeParser.T__0)
                self.state = 62
                self.match(TokenizeParser.IDENTIFIER)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TokenizeParser.INT, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)




    def int_(self):

        localctx = TokenizeParser.IntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(TokenizeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(TokenizeParser.FLOAT, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_float

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)




    def float_(self):

        localctx = TokenizeParser.FloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(TokenizeParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT(self):
            return self.getToken(TokenizeParser.UNIT, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = TokenizeParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(TokenizeParser.UNIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(TokenizeParser.BOOL, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)




    def bool_(self):

        localctx = TokenizeParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(TokenizeParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(TokenizeParser.CHAR, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_char

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChar" ):
                listener.enterChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChar" ):
                listener.exitChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChar" ):
                return visitor.visitChar(self)
            else:
                return visitor.visitChildren(self)




    def char(self):

        localctx = TokenizeParser.CharContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_char)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(TokenizeParser.CHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Missing_argContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MISSING_ARG(self):
            return self.getToken(TokenizeParser.MISSING_ARG, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_missing_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMissing_arg" ):
                listener.enterMissing_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMissing_arg" ):
                listener.exitMissing_arg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMissing_arg" ):
                return visitor.visitMissing_arg(self)
            else:
                return visitor.visitChildren(self)




    def missing_arg(self):

        localctx = TokenizeParser.Missing_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_missing_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(TokenizeParser.MISSING_ARG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterpolationSignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERPOLATIONSIGN(self):
            return self.getToken(TokenizeParser.INTERPOLATIONSIGN, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_interpolationSign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterpolationSign" ):
                listener.enterInterpolationSign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterpolationSign" ):
                listener.exitInterpolationSign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterpolationSign" ):
                return visitor.visitInterpolationSign(self)
            else:
                return visitor.visitChildren(self)




    def interpolationSign(self):

        localctx = TokenizeParser.InterpolationSignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_interpolationSign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(TokenizeParser.INTERPOLATIONSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DollarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLAR(self):
            return self.getToken(TokenizeParser.DOLLAR, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_dollar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDollar" ):
                listener.enterDollar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDollar" ):
                listener.exitDollar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDollar" ):
                return visitor.visitDollar(self)
            else:
                return visitor.visitChildren(self)




    def dollar(self):

        localctx = TokenizeParser.DollarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dollar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(TokenizeParser.DOLLAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dollar(self):
            return self.getTypedRuleContext(TokenizeParser.DollarContext,0)


        def interpolationSign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TokenizeParser.InterpolationSignContext)
            else:
                return self.getTypedRuleContext(TokenizeParser.InterpolationSignContext,i)


        def CHAR(self, i:int=None):
            if i is None:
                return self.getTokens(TokenizeParser.CHAR)
            else:
                return self.getToken(TokenizeParser.CHAR, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TokenizeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TokenizeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return TokenizeParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = TokenizeParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 84
                self.dollar()


            self.state = 87
            self.match(TokenizeParser.T__1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3145736) != 0):
                self.state = 94
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 88
                    self.match(TokenizeParser.T__2)
                    self.state = 89
                    self.expression()
                    self.state = 90
                    self.match(TokenizeParser.T__3)
                    pass
                elif token in [20]:
                    self.state = 92
                    self.interpolationSign()
                    pass
                elif token in [21]:
                    self.state = 93
                    self.match(TokenizeParser.CHAR)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(TokenizeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dotIentifier(self):
            return self.getTypedRuleContext(TokenizeParser.DotIentifierContext,0)


        def getRuleIndex(self):
            return TokenizeParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = TokenizeParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(TokenizeParser.T__4)
            self.state = 102
            self.match(TokenizeParser.T__5)
            self.state = 103
            self.dotIentifier()
            self.state = 104
            self.match(TokenizeParser.T__6)
            self.state = 105
            self.match(TokenizeParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Round_bracketsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TokenizeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TokenizeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return TokenizeParser.RULE_round_brackets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRound_brackets" ):
                listener.enterRound_brackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRound_brackets" ):
                listener.exitRound_brackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRound_brackets" ):
                return visitor.visitRound_brackets(self)
            else:
                return visitor.visitChildren(self)




    def round_brackets(self):

        localctx = TokenizeParser.Round_bracketsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_round_brackets)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(TokenizeParser.T__8)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.expression()
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17170464) != 0)):
                    break

            self.state = 113
            self.match(TokenizeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REC(self):
            return self.getToken(TokenizeParser.REC, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_rec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRec" ):
                listener.enterRec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRec" ):
                listener.exitRec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRec" ):
                return visitor.visitRec(self)
            else:
                return visitor.visitChildren(self)




    def rec(self):

        localctx = TokenizeParser.RecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_rec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(TokenizeParser.REC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PublicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(TokenizeParser.PUBLIC, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_public

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPublic" ):
                listener.enterPublic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPublic" ):
                listener.exitPublic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPublic" ):
                return visitor.visitPublic(self)
            else:
                return visitor.visitChildren(self)




    def public(self):

        localctx = TokenizeParser.PublicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_public)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TokenizeParser.PUBLIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrivateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIVATE(self):
            return self.getToken(TokenizeParser.PRIVATE, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_private

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrivate" ):
                listener.enterPrivate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrivate" ):
                listener.exitPrivate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrivate" ):
                return visitor.visitPrivate(self)
            else:
                return visitor.visitChildren(self)




    def private(self):

        localctx = TokenizeParser.PrivateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_private)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(TokenizeParser.PRIVATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InternalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERNAL(self):
            return self.getToken(TokenizeParser.INTERNAL, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_internal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInternal" ):
                listener.enterInternal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInternal" ):
                listener.exitInternal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInternal" ):
                return visitor.visitInternal(self)
            else:
                return visitor.visitChildren(self)




    def internal(self):

        localctx = TokenizeParser.InternalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_internal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(TokenizeParser.INTERNAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUTABLE(self):
            return self.getToken(TokenizeParser.MUTABLE, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_mutable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMutable" ):
                listener.enterMutable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMutable" ):
                listener.exitMutable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutable" ):
                return visitor.visitMutable(self)
            else:
                return visitor.visitChildren(self)




    def mutable(self):

        localctx = TokenizeParser.MutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_mutable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(TokenizeParser.MUTABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(TokenizeParser.LET, 0)

        def getRuleIndex(self):
            return TokenizeParser.RULE_let

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet" ):
                listener.enterLet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet" ):
                listener.exitLet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)




    def let(self):

        localctx = TokenizeParser.LetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_let)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(TokenizeParser.LET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(TokenizeParser.FUN, 0)

        def RIGHT_ARROW(self):
            return self.getToken(TokenizeParser.RIGHT_ARROW, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TokenizeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TokenizeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return TokenizeParser.RULE_fun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun" ):
                listener.enterFun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun" ):
                listener.exitFun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun" ):
                return visitor.visitFun(self)
            else:
                return visitor.visitChildren(self)




    def fun(self):
